[gd_scene load_steps=3 format=2]

[ext_resource path="res://LevelComponents/Scripts/SpaceBackground.gd" type="Script" id=1]
[ext_resource path="res://Generators/SpaceBackground/BackgroundGenerator/BackgroundGenerator.tscn" type="PackedScene" id=3]

[node name="BackgroundGenerator" type="Node2D"]
z_index = -10
z_as_relative = false
script = ExtResource( 1 )
type = 3

[node name="Background" parent="." instance=ExtResource( 3 )]
margin_right = 100.0
margin_bottom = 100.0

[node name="DustScroll" type="Node2D" parent="."]

[node name="Dust" parent="DustScroll" instance=ExtResource( 3 )]
margin_right = 100.0
margin_bottom = 100.0

[node name="NebulaeScroll" type="Node2D" parent="."]

[node name="Nebulae" parent="NebulaeScroll" instance=ExtResource( 3 )]
margin_right = 100.0
margin_bottom = 100.0

[node name="PlanetsScroll" type="Node2D" parent="."]

[node name="Planets" parent="PlanetsScroll" instance=ExtResource( 3 )]
margin_right = 100.0
margin_bottom = 100.0
